Increased vertical resolution for cross section, and reduced horizontal resolution.
# 0.00.19 (61657) Feb 23, 2012
Initial (rough and blocky) version of the rift boundary
Added experimental "combined" temperature-density view
Mountain refinement in collsisions
# 0.00.18 (61414) Feb 16, 2012
2/16/12 Experimenting with "mountains" in continental collision
# 0.00.17 (61306) Feb 13, 2012
Added ability to limit simulation time on animations
Added "Rewind" button to the plate motion tab
Increased the "texture" contrast
Added approximate continental collision model, crust/terrain changes to accommodate.
# 0.00.16 (61097) Feb 8, 2012
# 0.00.15 (61094) Feb 8, 2012
2/8/12 Texturing on all surfaces, significant model changes, and transform animation
# 0.00.14 (60935) Feb 1, 2012
Added texturing to cross sections
# 0.00.13 (60651) Jan 26, 2012
Changed the angle and position of the camera in the Crust tab when handling zoom
# 0.00.12 (60562) Jan 24, 2012
Density fixes for above-ground levels (water / air) for Crust tab
More consistent title fonts
Added in Legend with tentative positioning and styling
Changed the temperature false-color to range from gray to red
Better color handling (light/dark) for labels in the Crust tab
Full hemisphere of earth shown on Crust tab when zoomed out
Hid FPS readout by default, added developer option to enable it
Consolidated the time control readout, so now the inner visibility is toggled
# 0.00.10 (59979) Jan 6, 2012
Added "Temperature / Density" views on 1st tab
# 0.00.09 (59977) Jan 6, 2012
Can now only drag plates by their handles. Handle top matches mouse position as well as possible
Don't show handle on plate if it is a lighter plate
Handle rotation based on movement
Changed handle to stick-and-ball style
Reduced ruler size in toolbox for more visibility
Added manual mode time readout
Ruler drags from the top
Bugfix for 2nd tab dragging of tools that doesn't trigger the manual mode motion
# 0.00.08 (59921) Jan 5, 2012